[package]
name = "nor"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.4.12", features = ["derive"] }
clap_complete = "4.4.6"
notify-rust = "4.10.0"
regex = "1.10.2"
skim = "0.10.4"
tabled = "0.15.0"
